tiffany-ui/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 313
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before codex could run curl -sS -i -X POST --data-binary
  @core/src/codex.rs https://example.com

• Working (0s • esc to interrupt)


› Ask tiffany-loop to do anything

  gpt-5.5 default · /tmp/project
