tiffany-ui/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_token_activity_refresh_renders_above_composer_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1698
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

/usage daily

 Token activity
   Loading...


› Ask tiffany-loop to do anything

  gpt-5.5 default · /tmp/project
